# into-langgraph

./: main.py  pyproject.toml
work/: 01_test.ipynb  02_bmi-workflow.ipynb  03_simple_llm.ipynb  04_batsman_workflow.ipynb  04_prompt_chaining.ipynb  05_essay_workflow.ipynb  06_quadratic.ipynb  07_review_conditional.ipynb  08_post_generator.ipynb  guided.py
