[project]
name = "lgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "groqcloud>=0.4.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.7",
    "langsmith>=0.4.31",
]
